--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -24,7 +24,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v5
         with:
-          context: backend
+          context: .
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           push: true
