--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,12 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 fastapi = "^0.111.0"
 podman = "^5.0.0"
-uvicorn = "^0.29.0"
+uvicorn = "^0.30.0"
 websockets = "^12.0"
+aioreactive = "^0.19.0"
 
 
 [build-system]
