--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=backend
 
 de.openmower.backend.dockerSocketUrl=unix:///run/user/1000/podman/podman.sock
-de.openmower.backend.imageRegistry=ghcr.io/clemenselflein/open_mower_ros
+de.openmower.backend.defaultOpenMowerImage=ghcr.io/clemenselflein/open_mower_ros:latest
+de.openmower.backend.defaultOpenMowerMetaImage=ghcr.io/clemenselflein/openmowermeta:main
 de.openmower.backend.deploymentUrl=http://localhost:5173
+de.openmower.backend.configurationFilePath=~/.openmower
 
 #logging.level.root=DEBUG
