--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     -   id: check-executables-have-shebangs
     -   id: check-shebang-scripts-are-executable
     -   id: pretty-format-json
+        args: [--autofix]
     -   id: check-merge-conflict
     -   id: check-symlinks
     -   id: check-yaml
