--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,6 +13,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>backend</name>
 	<description>Backend for the OpenMower</description>
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 	<properties>
 		<java.version>21</java.version>
 		<kotlin.version>1.9.24</kotlin.version>
@@ -79,6 +85,13 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 			<version>1.26.2</version>
+		</dependency>
+
+		<!-- JSON schema -->
+		<dependency>
+			<groupId>com.github.jimblackler.jsonschemafriend</groupId>
+			<artifactId>core</artifactId>
+			<version>0.12.4</version>
 		</dependency>
 	</dependencies>
 
