--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@stomp/rx-stomp": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0",
     "react-time-ago": "^7.3.3",
     "zustand": "^4.5.4"
   },
